--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <head>
   <title>facey.space</title>
  </head>
- <body bgcolor="#000000">
-  <div align="center" color="#ffffff" font="Arial, Helvetica, sans-serif">facey.space</div>
+ <body bgcolor="#000000" color="#ffffff" >
+  <div align="center" font="Arial, Helvetica, sans-serif">facey.space</div>
  </body>
 </html>
