--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <head>
   <title>facey.space</title>
  </head>
- <body style="background-color: #000000; color: #ffffff; font-family: 'Arial, Helvetica, sans-serif'; text-align: center">
-   facey.space
+ <body style="background-color: #000000; color: #ffffff; font-family: 'Arial, Helvetica, sans-serif'; font-size: 14px; text-align: center">
+  facey.space
  </body>
 </html>
