--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <title>facey.space</title>
  </head>
  <body style="background-color: #000000; color: #ffffff; font-family: monospace; font-size: 100pt; text-align: center">
-  facey.space
+  <div align="center" style="border: 1px solid">facey.space</div>
  </body>
 </html>
