--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <head>
   <title>facey.space</title>
  </head>
- <body style="background-color: #000000; color: #ffffff; font-family: monospace; font-size: 100pt; text-align: center">
-  <div align="center" style="border: 1px solid">facey.space</div>
+ <body style="background-color: #000000; color: #ffffff; font-family: monospace; font-size: 20pt; text-align: center">
+  <div align="center" style="margin: 20px;"><span style="border: 1px solid; padding: 10px;">facey.space</span></div>
  </body>
 </html>
