--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
  <head>
-  <title>facey.space</title>
+  <title>Facey Space!</title>
  </head>
  <body style="background-color: #000000; color: #ffffff; font-family: monospace; font-size: 20pt; text-align: center">
-  <div align="center" style="margin: 20px;"><span style="border: 1px solid; padding: 10px;">facey.space</span></div>
+  <div align="center" style="margin: 20px;"><span style="border: 1px solid; padding: 10px;">Facey Space!</span></div>
  </body>
 </html>
