--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
  <head>
-  <title>Facey.Space!</title>
+  <title>Facey Space!</title>
  </head>
  <body style="background-color: #000000; color: #ffffff; font-family: monospace; font-size: 20pt; text-align: center">
   <div align="center" style="margin: 20px;"><span style="border: 1px solid; padding: 10px;">Facey Space!</span></div>
